Fixed the icons spacing.

--- a/app/styles/_tachyons.scss
+++ b/app/styles/_tachyons.scss
@@ -12,3 +12,4 @@
 .w-45 { width: 45%; }
 .w0 { width: 0; }
 .h0 { height: 0; }
+.nb-2 { margin-bottom: -2px; }
